force-app/main/default/objects/Remediation_Log__c/Remediation_Log__c.object-meta.xml
<CustomObject>
    <description>Audit log for BehaviorIQ auto-fix remediation actions. Tracks all changes made by the Magic Wand feature.</description>
    <label>Remediation Log</label>
    <nameField>
        <displayFormat>RL-{0000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remediation Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>