force-app/main/default/objects/Remediation_Log__c/fields/Action_Index__c.field-meta.xml
<CustomField>
    <fullName>Action_Index__c</fullName>
    <description>Zero-based index of the action within a declarative fix configuration. Identifies which specific action in a multi-action config succeeded or failed.</description>
    <label>Action Index</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>