force-app/main/default/objects/Remediation_Log__c/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <description>The type of remediation action that was performed.</description>
    <label>Action Taken</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Task_Creation</fullName>
                <label>Task Creation</label>
            </value>
            <value>
                <fullName>Owner_Assignment</fullName>
                <label>Owner Assignment</label>
            </value>
            <value>
                <fullName>Field_Update</fullName>
                <label>Field Update</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>