force-app/main/default/objects/Remediation_Log__c/fields/Affected_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Affected_Record_ID__c</fullName>
    <description>The 18-character Salesforce ID of the record that was modified by the remediation action.</description>
    <label>Affected Record ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>