force-app/main/default/objects/Remediation_Log__c/fields/Executed_By__c.field-meta.xml
<CustomField>
    <fullName>Executed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who triggered the remediation action.</description>
    <label>Executed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Remediation_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>