force-app/main/default/objects/Remediation_Log__c/fields/Execution_Time_Ms__c.field-meta.xml
<CustomField>
    <fullName>Execution_Time_Ms__c</fullName>
    <description>CPU time in milliseconds consumed by this fix action. Used for performance monitoring and identifying slow plugins.</description>
    <label>Execution Time (ms)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>