force-app/main/default/objects/Remediation_Log__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <description>The new value after the remediation action was applied.</description>
    <label>New Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>