force-app/main/default/objects/Remediation_Log__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <description>The API name of the object that was remediated (e.g., Contact, Case, Opportunity)</description>
    <type>Text</type>
    <length>80</length>
</CustomField>