force-app/main/default/objects/Remediation_Log__c/fields/Original_Value__c.field-meta.xml
<CustomField>
    <fullName>Original_Value__c</fullName>
    <description>The original value before the remediation action was applied.</description>
    <label>Original Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>