force-app/main/default/objects/Remediation_Log__c/fields/Plugin_Class__c.field-meta.xml
<CustomField>
    <fullName>Plugin_Class__c</fullName>
    <description>Fully qualified class name of the Apex plugin that performed this action. Enables tracing fix actions back to specific plugin implementations.</description>
    <label>Plugin Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>