force-app/main/default/objects/Remediation_Log__c/fields/Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Name__c</fullName>
    <label>Record Name</label>
    <description>The Name field value of the affected record for easy identification</description>
    <type>Text</type>
    <length>255</length>
</CustomField>