force-app/main/default/objects/Remediation_Log__c/fields/Rule_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Rule_Developer_Name__c</fullName>
    <description>The Developer Name of the Behavior Pattern Rule that triggered this remediation.</description>
    <label>Rule Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>