force-app/main/default/objects/Remediation_Log__c/fields/Snapshot_JSON__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_JSON__c</fullName>
    <description>Full JSON snapshot of the record state before remediation was applied. Used for future "Undo" functionality. Contains all field values that were present on the record at the time of the fix.</description>
    <inlineHelpText>JSON snapshot of the original record state before this fix was applied.</inlineHelpText>
    <label>Snapshot JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>