force-app/main/default/objects/Remediation_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Record_Name__c</columns>
    <columns>Rule_Developer_Name__c</columns>
    <columns>Action_Taken__c</columns>
    <columns>Status__c</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Executed_By__c</columns>
    <columns>Execution_Time_Ms__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>